# DataSolver

./: README.md  mkdocs.yaml  pyproject.toml
datasolver/: DataSolver.py  Database.py
docs/: index.md
docs/Documentação/: Database.md
